--- a/content/2.python/2.python_advanced/06.Concurrency/drills_concurrency.ipynb
+++ b/content/2.python/2.python_advanced/06.Concurrency/drills_concurrency.ipynb
@@ -18,10 +18,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import glob\n",
+    "import time\n",
+    "from time import perf_counter\n",
+    "from multiprocessing import Pool\n",
+    "\n",
+    "x = 0\n",
+    "file = \"./data/data_all.txt\"\n",
+    "variable = (glob.glob(\"./data/*.txt\"))\n",
+    "\n",
+    "from multiprocessing import Pool\n",
+    "\n",
+    "start_time = perf_counter()\n",
+    "\n",
+    "with Pool() as pool: \n",
+    "    for x in range(0, len(variable)):\n",
+    "        input_file = open(variable[x], \"r+\", encoding='latin-1')\n",
+    "        input_file = (input_file.read())\n",
+    "        destination = open(file, \"w\")\n",
+    "        destination.write(input_file)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,19 +80,25 @@
  ],
  "metadata": {
   "file_extension": ".py",
+  "interpreter": {
+   "hash": "098abfbdda89cc068fc5a24c70b28519776b65016448753c248b3e3ae6b6b2c3"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython"
+    "name": "ipython",
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "mimetype": "text/x-python",
   "name": "python",
