--- a/content/2.python/2.python_advanced/08.Typing/drills_typing.ipynb
+++ b/content/2.python/2.python_advanced/08.Typing/drills_typing.ipynb
@@ -16,10 +16,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = input(\"geef me een nummer\")\n",
+    "x = (int(x))\n",
+    "print(type(x))\n",
+    "def make_a_string(x):\n",
+    "    x = (str(x))\n",
+    "    print(type(x))\n",
+    "make_a_string(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -30,10 +47,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = input(\"Give the number that needs to be divided?\")\n",
+    "y = input(\"Give the divider?\")\n",
+    "def divide(x, y):\n",
+    "    result = int(x) / int(y)\n",
+    "    print(result)\n",
+    "divide(x, y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,19 +134,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython"
+    "name": "ipython",
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
