first commit data tools

--- a/content/3.data_tools/numPy/01.Drill_numpy.ipynb
+++ b/content/3.data_tools/numPy/01.Drill_numpy.ipynb
@@ -22,10 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -39,7 +41,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(np.__version__)\n",
+    "print(np.show_config())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,7 +58,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "zeros = np.zeros((1,10))\n",
+    "zeros"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,7 +75,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(zeros.size)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,7 +91,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.lookfor (\"add\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,7 +107,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = np.zeros(10)\n",
+    "x[4] = 1\n",
+    "print(x)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,7 +125,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.arange(10, 50)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,7 +141,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "A = np.array([[1,2,3],[4,5,6]])\n",
+    "np.flip(A)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,7 +158,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "k = np.arange(9).reshape(3, 3)\n",
+    "print(k)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,7 +175,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = np.array([1, 2, 0, 0, 4, 0])\n",
+    "result = np.nonzero(x)\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,7 +193,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.identity(3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,7 +209,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.random.random((3,3,3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,7 +225,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = np.random.random((10,10))\n",
+    "print(a)\n",
+    "print(\"min =\", a.min())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,7 +243,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = np.random.random(30)\n",
+    "print(x)\n",
+    "print(\"mean =\", x.mean())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,7 +261,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = np.ones((3,3))\n",
+    "a[1,1] = 0\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,7 +279,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "x = np.ones((3,3))\n",
+    "print(\"Original array:\")\n",
+    "print(x)\n",
+    "print(\"0 on the border and 1 inside in the array\")\n",
+    "x = np.pad(x, pad_width=1, mode='constant', constant_values=0)\n",
+    "print(x)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -257,7 +309,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(0  * np.nan)\n",
+    "print(np.nan == np.nan)\n",
+    "print(np.inf > np.nan)\n",
+    "print(np.nan - np.nan)\n",
+    "print(np.nan in set([np.nan]))\n",
+    "print(0.3 == 3 * 0.1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -268,10 +327,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 187,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0]\n",
+      " [1 0 0 0 0]\n",
+      " [0 2 0 0 0]\n",
+      " [0 0 3 0 0]\n",
+      " [0 0 0 4 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.diag((1,2,3,4), -1)\n",
+    "print(a)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -282,10 +356,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checkerboard pattern:\n",
+      "[[0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "print(\"Checkerboard pattern:\")\n",
+    "x = np.zeros((8,8),dtype=int)\n",
+    "# (odd_rows, even_columns)\n",
+    "x[1::2,::2] = 1\n",
+    "# (even_rows, odd_columns)\n",
+    "x[::2,1::2] = 1\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -296,10 +395,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([1]), array([5]), array([4]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.unravel_index([100], (6, 7, 8))\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,10 +420,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 245,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.array([[0,1], [1,0]])\n",
+    "print(np.tile(a, (4, 4)))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -324,10 +453,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 250,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.26492864 0.11170712 0.04100658 0.08153151 0.05985225]\n",
+      " [0.07168432 0.13469798 0.08668321 0.22063721 0.20318126]\n",
+      " [0.24685113 0.35012503 0.12246816 0.04527578 0.3201934 ]\n",
+      " [0.06580487 0.15934915 0.35331446 0.18708475 0.01562876]\n",
+      " [0.20289589 0.20324917 0.22380405 0.22565082 0.32906893]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.random((5, 5))\n",
+    "norm = np.linalg.norm(x)\n",
+    "normal_x = x/norm\n",
+    "print(normal_x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -338,10 +484,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 269,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt = np.dtype([('R','u2'), ('G','u1'), ('B','u1'), ('A','u1')])\n",
+    "x = dt.itemsize\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -352,10 +510,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 270,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First array:\n",
+      " [[0.66466344 0.2918799  0.35082584]\n",
+      " [0.08372518 0.88929493 0.40111795]\n",
+      " [0.66940314 0.85844646 0.77154913]\n",
+      " [0.2006551  0.79342228 0.59508084]\n",
+      " [0.71353788 0.55255422 0.12037414]]\n",
+      "Second array:\n",
+      " [[0.37281313 0.18406814]\n",
+      " [0.73174903 0.88190589]\n",
+      " [0.72598813 0.97035411]]\n",
+      "Dot product of two arrays:\n",
+      " [[0.71607349 0.72017926]\n",
+      " [0.97316142 1.18891203]\n",
+      " [1.43786516 1.62896065]\n",
+      " [1.08741446 1.31409713]\n",
+      " [0.7577375  0.73544595]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.random.random((5,3))\n",
+    "print(\"First array:\\n\", x)\n",
+    "y = np.random.random((3,2))\n",
+    "print(\"Second array:\\n\", y)\n",
+    "z = np.dot(x, y)\n",
+    "print(\"Dot product of two arrays:\\n\", z)"
+   ]
   },
   {
    "cell_type": "markdown",
