--- a/content/3.data_tools/pandas/01.drill/pandas_exercises/02_Filtering_&_Sorting/Chipotle/Exercises.ipynb
+++ b/content/3.data_tools/pandas/01.drill/pandas_exercises/02_Filtering_&_Sorting/Chipotle/Exercises.ipynb
@@ -19,10 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -40,10 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url = \"https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv\"\n",
+    "chipo = pd.read_csv(url, sep='\\t')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,10 +60,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        2.39\n",
+      "1        3.39\n",
+      "2        3.39\n",
+      "3        2.39\n",
+      "4       16.98\n",
+      "        ...  \n",
+      "4617    11.75\n",
+      "4618    11.75\n",
+      "4619    11.25\n",
+      "4620     8.75\n",
+      "4621     8.75\n",
+      "Name: item_price, Length: 4622, dtype: float64\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Series.drop_duplicates() got an unexpected keyword argument 'subset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/Jorg/BeCode/Theano-4/content/3.data_tools/pandas/01.drill/pandas_exercises/02_Filtering_&_Sorting/Chipotle/Exercises.ipynb Cell 8'\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/3.data_tools/pandas/01.drill/pandas_exercises/02_Filtering_%26_Sorting/Chipotle/Exercises.ipynb#ch0000007?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(cleaned_prices)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/3.data_tools/pandas/01.drill/pandas_exercises/02_Filtering_%26_Sorting/Chipotle/Exercises.ipynb#ch0000007?line=7'>8</a>\u001b[0m \u001b[39m# delete the duplicates in item_name and quantity\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/3.data_tools/pandas/01.drill/pandas_exercises/02_Filtering_%26_Sorting/Chipotle/Exercises.ipynb#ch0000007?line=8'>9</a>\u001b[0m cleaned_prices\u001b[39m.\u001b[39;49mdrop_duplicates(subset\u001b[39m=\u001b[39;49m[\u001b[39m\"\u001b[39;49m\u001b[39mitem_name\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mquantity\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/util/_decorators.py:311\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/util/_decorators.py?line=304'>305</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m>\u001b[39m num_allow_args:\n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/util/_decorators.py?line=305'>306</a>\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/util/_decorators.py?line=306'>307</a>\u001b[0m         msg\u001b[39m.\u001b[39mformat(arguments\u001b[39m=\u001b[39marguments),\n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/util/_decorators.py?line=307'>308</a>\u001b[0m         \u001b[39mFutureWarning\u001b[39;00m,\n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/util/_decorators.py?line=308'>309</a>\u001b[0m         stacklevel\u001b[39m=\u001b[39mstacklevel,\n\u001b[1;32m    <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/util/_decorators.py?line=309'>310</a>\u001b[0m     )\n\u001b[0;32m--> <a href='file:///Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/util/_decorators.py?line=310'>311</a>\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "\u001b[0;31mTypeError\u001b[0m: Series.drop_duplicates() got an unexpected keyword argument 'subset'"
+     ]
+    }
+   ],
+   "source": [
+    "# clean the item_price column and transform it in a float\n",
+    "#chipo.item_price = chipo['item_price'].apply(lambda x: x.replace('$', '').replace(',', '')).astype('float')\n",
+    "\n",
+    "# reassign the column with the cleaned prices\n",
+    "#df = pd.DataFrame(chipo)\n",
+    "cleaned_prices = chipo.item_price\n",
+    "print(cleaned_prices)\n",
+    "# delete the duplicates in item_name and quantity\n",
+    "cleaned_prices.drop_duplicates(subset=[\"item_name\", \"quantity\"])\n",
+    "\n",
+    "# select only the products with quantity equals to 1\n",
+    "\n",
+    "#x = chipo.loc[(chipo[\"quantity\"] == 1) & (chipo[\"item_price\"] > 10)].value_counts()\n",
+    "#print(x)\n",
+    "#x.value_counts()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,8 +185,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -147,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
